--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "dependencies": {
     "native-base": "^2.8.1",
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.3",
+    "react": "16.5.1",
+    "react-native": "0.57.0",
+    "react-native-svg": "^8.0.0",
+    "react-native-svg-uri": "^1.2.3",
     "redux": "^4.0.1",
     "redux-axios-middleware": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/runtime": "7.0.0",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.1",
