--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "native-base": "^2.8.1",
     "react": "16.5.1",
     "react-native": "0.57.0",
     "react-native-svg": "^8.0.0",
     "react-native-svg-uri": "^1.2.3",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.1",
     "redux-axios-middleware": "^4.0.0"
   },
